Inkscape/Instalación Inkscape 1.1/log de error.txt

[ 51%] Building CXX object src/CMakeFiles/inkscape_base.dir/object/sp-use.cpp.o
In file included from /home/wachin/Developer/gitlab/Inkscape-releases/inkscape/src/style.h:22,
                 from /home/wachin/Developer/gitlab/Inkscape-releases/inkscape/src/object/sp-use.cpp:37:
/home/wachin/Developer/gitlab/Inkscape-releases/inkscape/src/style-internal.h:199:28: warning: ‘SPIBase::style_src’ is too small to hold all values of ‘enum class SPStyleSrc’
     SPStyleSrc style_src : 2; // Source (attribute, style attribute, style-sheet).
                            ^
In file included from /usr/include/c++/8/memory:80,
                 from /home/wachin/Developer/gitlab/Inkscape-releases/inkscape/src/document.h:25,
                 from /home/wachin/Developer/gitlab/Inkscape-releases/inkscape/src/object/sp-use.cpp:27:
/usr/include/c++/8/bits/unique_ptr.h: In instantiation of ‘void std::default_delete<_Tp>::operator()(_Tp*) const [with _Tp = SPCurve]’:
/usr/include/c++/8/bits/unique_ptr.h:274:17:   required from ‘std::unique_ptr<_Tp, _Dp>::~unique_ptr() [with _Tp = SPCurve; _Dp = std::default_delete<SPCurve>]’
/home/wachin/Developer/gitlab/Inkscape-releases/inkscape/src/object/sp-use-reference.h:45:50:   required from here
/usr/include/c++/8/bits/unique_ptr.h:79:16: error: invalid application of ‘sizeof’ to incomplete type ‘SPCurve’
  static_assert(sizeof(_Tp)>0,
                ^~~~~~~~~~~
make[2]: *** [src/CMakeFiles/inkscape_base.dir/build.make:4685: src/CMakeFiles/inkscape_base.dir/object/sp-use.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1158: src/CMakeFiles/inkscape_base.dir/all] Error 2
make: *** [Makefile:163: all] Error 2
wachin@avlinux:~/Developer/gitlab/Inkscape-releases/inkscape/build
$ 

